[package]
name = "tcp-lang-conn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.4.4"
libc = "0.2.126"
nix = {version="0.24.1"}
crossbeam-channel = "0.5.6"
tokio = { version = "1.35.0", features = ["full"] }